# memwatch

./: .gitignore  CMakeLists.txt  Info.plist  Main.cc  Makefile  Makefile.inc  Makefile.iphone  MemorySearch.cc  MemorySearch.hh  MemwatchShell.cc  MemwatchShell.hh  ProcessMemoryAdapter.cc  ProcessMemoryAdapter.hh  README  README.md  RegionFreezer.cc  RegionFreezer.hh  Signalable.cc  Signalable.hh  freeze_region.c  freeze_region.h  memory_search.c  memory_search.h  memwatch.1  memwatch.c  memwatch.entitlements  parse_utils.c  parse_utils.h  process_utils.c  process_utils.h  register_test32.s  register_test64.s  search_data.c  search_data.h  search_data_list.c  search_data_list.h  value_test.c  value_test_float  value_test_float.c  vmmap.c  (+3 more)
Assembler/: AMD64Assembler.cc  AMD64Assembler.hh  AMD64AssemblerTest.cc  FileAssembler.cc  FileAssembler.hh
src/: Main.cc  MemorySearch.cc  MemorySearch.hh  MemwatchShell.cc  MemwatchShell.hh  ProcessMemoryAdapter.cc  ProcessMemoryAdapter.hh  RegionFreezer.cc  RegionFreezer.hh  Signalable.cc  Signalable.hh
src/tests/: array_test.cc  value_test.cc  value_test_float.cc
tests/: .gitignore  Makefile  array_test.c  array_test.cc  pt_deny_test.c  register_test32.s  register_test64.s  value_test.c  value_test.cc  value_test_float.c  value_test_float.cc
